--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="css/text" href="assets/css/reset.css">
+    <link rel="stylesheet" type="css/text" href="assets/css/styles.css">
+    <script src="assets/javascript/game.js"></script>
     <title>Psychic Game</title>
 </head>
+
 <body>
-    
+    <div>
+        <h1>Psychic Game</h1>
+        <p id="directions-txt">Guess what letter I am thinking of</p>
+        <p id="wins-txt"></p>
+        <p id="losses-txt"></p>
+        <p id="left-txt"></p>
+        <p id="your-guesses"></p>
+
+    </div>
+
 </body>
+
+
 </html>
