--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <body>
     <div>
-        <h1>Psychic Game</h1>
-        <p id="directions-txt">Guess what letter I am thinking of</p>
-        <p id="wins-txt"></p>
-        <p id="losses-txt"></p>
-        <p id="left-txt"></p>
-        <p id="your-guesses"></p>
+
+        <div id="text">
+            <h1>Psychic Game</h1>
+            <p>Press any key to start playing</p>
+        </div>
+
 
     </div>
 
 </body>
 
 
-</html>
+</html> 
